--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-h1, h2 {
+h1,
+h2 {
   font-family: Lato;
 }
 
@@ -9,12 +10,18 @@ h1, h2 {
 }
 
 .container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr)  200px;
-    grid-template-rows: 1fr 2fr;
-    grid-gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr) 200px;
+  grid-template-rows: 1fr 2fr;
+  grid-gap: 10px;
 }
 
 .item {
-  background: linear-gradient(to right, lightgrey ,lightcyan);
+  background: linear-gradient(to right, lightgrey, lightcyan);
+}
+
+.item1 {
+  grid-row: 2/3;
+  grid-column-start: 2;
+  grid-column-end: 3;
 }
