--- a/style.css
+++ b/style.css
@@ -25,3 +25,36 @@ h2 {
   grid-column-start: 2;
   grid-column-end: 3;
 }
+
+.layout {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: 100px repeat(2, 1fr);
+  grid-template-rows: 80px 1fr 1fr 100px;
+  grid-gap: 10px;
+  grid-template-areas:
+    'header header header'
+    'sidebar content1 content1'
+    'sidebar content2 content3'
+    'footer footer footer';
+}
+
+.header {
+  grid-area: header;
+}
+.footer {
+  grid-area: footer;
+}
+.sidebar {
+  grid-area: sidebar;
+}
+.content1 {
+  grid-area: content1;
+}
+.content2 {
+  grid-area: content2;
+}
+.content3 {
+  grid-area: content3;
+}
